[PS] Fix up example task in lab 13